simplify bin/release

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@
 # python
 __pycache__
 
-# intermediate makefiles
-
 # build artifacts
 /site/
 /content/**/*.d
@@ -17,3 +15,6 @@ __pycache__
 
 # `make profile` artifacts
 profile.out
+
+# release artifacts
+/release/
