--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ __pycache__
 /content/**/*.d
 /content/**/*_small.webp
 /content/**/*.dot.png
+/content/**/*.imginfo.json
 /config/fonts.css
 
 # `make profile` artifacts
